add hero section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,37 @@
 
 </head>
 <body>
-    Abhishek
+    <!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                                 Header
+     *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+    <header>
+        <nav>
+            <div class="logo"><img src="image/techcoder.png" alt="Logo"></div>
+            <div class="menu">
+               <ul class="navList">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Project</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#" class="menuBtn">Hire US</a></li>
+               </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                    Hero Section
+     *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+     <section>
+        <div class="heroSection">
+            <div class="textBox">
+                <h2>Tech Coder</h2><br>
+                <h2>You Think, We Code.</h2>
+                <div class="btn">Hire Us</div>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
