--- a/index.html
+++ b/index.html
@@ -46,5 +46,59 @@
             </div>
         </div>
      </section>
+
+     <!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                    Team Section
+     *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+
+     <section id="team-members">
+        <div class="team-card">
+            <div class="member-image"> </div>
+
+            <div class="member-details">
+                <h3 class="name">Abhishek Kumar || Founder</h3>
+
+                <p class="member-bio">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias illum deleniti distinctio vitae amet! Dicta, consectetur ipsa!
+                </p>
+            </div>
+
+            <div class="member-btn">
+                <button>Know More</button>
+            </div>
+        </div>
+
+        <div class="team-card">
+            <div class="member-image"> </div>
+
+            <div class="member-details">
+                <h3 class="name">Yogita Sharma || CEO</h3>
+
+                <p class="member-bio">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias illum deleniti distinctio vitae amet! Dicta, consectetur ipsa!
+                </p>
+            </div>
+
+            <div class="member-btn">
+                <button>Know More</button>
+            </div>
+        </div>
+
+        <div class="team-card">
+            <div class="member-image"> </div>
+
+            <div class="member-details">
+                <h3 class="name">Suraj Chandra || NOOB</h3>
+
+                <p class="member-bio">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias illum deleniti distinctio vitae amet! Dicta, consectetur ipsa!
+                </p>
+            </div>
+
+            <div class="member-btn">
+                <button>Know More</button>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
