--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3 class="name">Abhishek Kumar || Founder</h3>
 
                 <p class="member-bio">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias illum deleniti distinctio vitae amet! Dicta, consectetur ipsa!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias.
                 </p>
             </div>
 
