Member Description Changed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3 class="name">Abhishek Kumar || Founder</h3>
 
                 <p class="member-bio">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias.
+                    Abhishek gathered a team, which you know as Tech Coder, full of energitic, young and potantial talentes. He is a Web Developer and AI & Ml enthusiast. He is looking to work on AI & ML projects with techies like him.
                 </p>
             </div>
 
@@ -75,7 +75,7 @@
                 <h3 class="name">Yogita Sharma || CEO</h3>
 
                 <p class="member-bio">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias illum deleniti distinctio vitae amet! Dicta, consectetur ipsa!
+                    Yogita is young girl who is pasionate about Data Science. Yogita has a good command in MongoDB and Backend Technologies. Pesonally She wants to go for Data Science but she is also interested to learn trending Technologies.
                 </p>
             </div>
 
@@ -91,7 +91,7 @@
                 <h3 class="name">Suraj Chandra || NOOB</h3>
 
                 <p class="member-bio">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, nemo dignissimos. Iusto quaerat maxime illo eius eum, sit repellendus voluptates inventore alias illum deleniti distinctio vitae amet! Dicta, consectetur ipsa!
+                    Suraj is basically a noob player in this team who often works as UI and Graphis Designer but he wants to learn Full Stack Technologies. Suraj is not commited to his career and often chooses a path which may have a bright future ahead waiting for him.
                 </p>
             </div>
 
