Footer Added and Member Images Changed

--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
 
      <section id="team-members">
         <div class="team-card">
-            <div class="member-image"> </div>
+            <div class="member-image"> 
+                <img src="Image/abhi2.jpg" alt="">
+
+            </div>
 
             <div class="member-details">
-                <h3 class="name">Abhishek Kumar || Founder</h3>
+                <h3 class="name">Abhishek Kumar</h3>
 
                 <p class="member-bio">
                     Abhishek gathered a team, which you know as Tech Coder, full of energitic, young and potantial talentes. He is a Web Developer and AI & Ml enthusiast. He is looking to work on AI & ML projects with techies like him.
@@ -69,10 +72,12 @@
         </div>
 
         <div class="team-card">
-            <div class="member-image"> </div>
+            <div class="member-image">
+                <img src="Image/yogita.jpg" alt="">
+                 </div>
 
             <div class="member-details">
-                <h3 class="name">Yogita Sharma || CEO</h3>
+                <h3 class="name">Yogita Sharma</h3>
 
                 <p class="member-bio">
                     Yogita is young girl who is pasionate about Data Science. Yogita has a good command in MongoDB and Backend Technologies. Pesonally She wants to go for Data Science but she is also interested to learn trending Technologies.
@@ -85,10 +90,12 @@
         </div>
 
         <div class="team-card">
-            <div class="member-image"> </div>
+            <div class="member-image"> 
+                <img src="Image/suraj.jpg" alt="">
+            </div>
 
             <div class="member-details">
-                <h3 class="name">Suraj Chandra || NOOB</h3>
+                <h3 class="name">Suraj Chandra</h3>
 
                 <p class="member-bio">
                     Suraj is basically a noob player in this team who often works as UI and Graphis Designer but he wants to learn Full Stack Technologies. Suraj is not commited to his career and often chooses a path which may have a bright future ahead waiting for him.
@@ -100,5 +107,22 @@
             </div>
         </div>
      </section>
+
+     <!-- Footer Starts Here -->
+     <footer>
+        <div class="pages">
+            <ul class="footer-pages">
+                <li>About</li>
+                <li>Contact</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+
+        <div class="credit">
+            All Rights Reserved @TechCoders <span class="heart">&hearts;</span>
+        </div>
+     </footer>
+     <!-- Footer Ends Here -->
+
 </body>
 </html>
