--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
      <footer>
         <div class="pages">
             <ul class="footer-pages">
-                <li>About</li>
-                <li>Contact</li>
-                <li>Privacy</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Privacy</a></li>
             </ul>
         </div>
 
