--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             </div>
 
             <div class="member-btn">
-                <button>Know More</button>
+                <a href="#">Know More</a>
+
             </div>
         </div>
 
@@ -85,7 +86,7 @@
             </div>
 
             <div class="member-btn">
-                <button>Know More</button>
+                <a href="#">Know More</a>
             </div>
         </div>
 
@@ -103,7 +104,7 @@
             </div>
 
             <div class="member-btn">
-                <button>Know More</button>
+                <a href="#">Know More</a>
             </div>
         </div>
      </section>
