--- a/index.html
+++ b/index.html
@@ -54,9 +54,48 @@
         </div>
      </section>
 
+<!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                              Offer
+ *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+    <section>
+        <div class="heading">What Do We Offer</div>
+        <div class="offer grid grid-two-col">
+            <div class="left-offer">
+                <label for="">HTML</label>
+                <div class="prograsbar p-html"></div>
+                <label for="">CSS</label>
+                <div class="prograsbar p-css"></div>
+                <label for="">Java Script</label>
+                <div class="prograsbar p-js"></div>
+                <label for="">MongoDB</label>
+                <div class="prograsbar p-db"></div>
+                <label for="">Python</label>
+                <div class="prograsbar p-python"></div>
+                <label for="">AI & ML</label>
+                <div class="prograsbar p-ml"></div>
+                <label for="">Graphic Designing</label>
+                <div class="prograsbar p-gd"></div>
+            </div>
+            <div class="right-offer">
+                <h2><i class="fa-solid fa-laptop"></i>Web Developer</h2>
+                <p>We make tutorials of all the Programming and Scripting languages to help for free.</p>
+                <h2><i class="fa-solid fa-people-group"></i>My Team</h2>
+                <p>Abhishek kumar , Yogita Sharma , Suraj Paladiya</p>
+                <h2><i class="fa-solid fa-diagram-project"></i>Latest Project</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, eum nisi. Iste, ratione natus consequuntur placeat reprehenderit beatae illo dolor repellat iure neque laborum culpa officiis distinctio, amet nihil inventore.
+                </p>
+                <h2><i class="fa-solid fa-building-columns"></i>University Important Topics</h2>
+                <p>We also covers all the important topics as per university to help students to understant topic easily.                </p>
+            </div>
+        </div>
+    </section>
+
+
+
      <!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
                                     Team Section
      *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+     <div class="heading">We Are Tech Coder</div>
 
      <section id="team-members">
         <div class="team-card">
