add project section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,29 @@
             </div>
         </div>
     </section>
+<!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                             Join Box
+ *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+<section>
+    <div class="join-box grid grid-three-col">
+        <div class="j-box1 j-box"><i class="fa-solid fa-diagram-project"></i>100+<br>Total Pojects</div>
+        <div class="j-box2 j-box"><i class="fa-solid fa-person-chalkboard"></i>100+<br>Happy Coustomers</div>
+        <div class="j-box3 j-box"><i class="fa-solid fa-graduation-cap"></i>100+<br>Happy Learners</div>
+    </div>
+</section>
+<!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                             Project
+ *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+<section>
+    <div class="heading">Our work</div>
+    <div class="project grid grid-four-col">
+      <div class="project1 pro"> <a href="#"> <div class="overlay">project 1</div></div></a>
+      <div class="project2 pro"> <a href="#"> <div class="overlay"></div></div></a>
+      <div class="project3 pro"> <a href="#"> <div class="overlay"></div></div></a>
+      <div class="project4 pro"> <a href="#"> <div class="overlay"></div></div></a>
+    </div>
+</section>
+
 
 
 
