--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@
 <section>
     <div class="heading">Our work</div>
     <div class="project grid grid-four-col">
-      <div class="project1 pro"> <a href="#"> <div class="overlay">project 1</div></div></a>
-      <div class="project2 pro"> <a href="#"> <div class="overlay"></div></div></a>
-      <div class="project3 pro"> <a href="#"> <div class="overlay"></div></div></a>
-      <div class="project4 pro"> <a href="#"> <div class="overlay"></div></div></a>
+      <div class="project1 pro"> <a href="#"> <img src="Image/abhi.jpg" alt=""><div class="overlay">Abhishek</div></div></a>
+      <div class="project2 pro"> <a href="#"> <img src="Image/yogita.jpg" alt=""><div class="overlay">Yogita</div></div></a>
+      <div class="project3 pro"> <a href="#"> <img src="Image/suraj.jpg" alt=""><div class="overlay">Suraj</div></div></a>
+      <div class="project4 pro"> <a href="#"> <img src="Image/abhi2.jpg" alt=""><div class="overlay">Abhishek</div></div></a>
+
     </div>
 </section>
 
