add work section

--- a/index.html
+++ b/index.html
@@ -114,6 +114,50 @@
 </section>
 
 
+<!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+                                        Work
+ *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*/-->
+<section>
+    <div class="heading">Work Services</div>
+
+    <div class="work grid grid-three-col">
+        <div class=" w-cart">
+            <i class="fa-solid fa-laptop-code"></i>
+            <h2>Web Designs</h2>
+            <p>Web designers plan, create and code internet sites and web pages, many of which combine text with sounds, pictures, graphics and video clips.
+            </p>
+        </div>
+        <div class=" w-cart">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+                                    <h2>Clipping Path</h2>
+            <p>Clipping path is the path we use to clip an element, it marks out our clipping region. It can be a basic shape or a complex polygonal path. The clipping region then includes all the area enclosed within the clipping path.
+            </p>
+        </div>
+        <div class=" w-cart">
+            <i class="fa-solid fa-laptop-code"></i>
+            <h2>Graphic Designer</h2>
+            <p>Design is not just what it looks like and feels like. Design is how it works            </p>
+        </div>
+        <div class=" w-cart">
+            <i class="fa-brands fa-uikit"></i>
+                        <h2>UI/UX            </h2>
+            <p>UI is the saddle, the stirrups, & the reins. UX is the feeling you get being able to ride the horse.            </p>
+        </div>
+        <div class=" w-cart">
+            <i class="fa-solid fa-book"></i>
+                        <h2>Coruse</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur velit beatae architecto quisquam laborum similique dignissimos id explicabo quo aliquid, amet officiis. Quasi cumque excepturi optio aliquid, ut cum odio!</p>
+        </div>
+        <div class=" w-cart">
+            <i class="fa-solid fa-database"></i>
+                        <h2>Data Science</h2>
+            <p>Web designers plan, create and code internet sites and web pages, many of which combine text with sounds, pictures, graphics and video clips.
+            </p>
+        </div>
+
+
+    </div>
+</section>
 
 
      <!--/*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
